fix style scrollbar

--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -33,3 +33,16 @@ nav a {
 li {
   padding-right: 20px;
 }
+
+::-webkit-scrollbar{
+  width: 10px;
+  background-color: #F5F5F5;
+}
+::-webkit-scrollbar-track{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #454545;
+}
+::-webkit-scrollbar-thumb{
+  background-color: rgb(27, 27, 27); 
+  background-image: -webkit-linear-gradient(90deg,rgba(8, 8, 8, 0.2) 25%,transparent 25%,transparent 50%,rgbrgba(53, 53, 53, 0.2),rgba(255, 255, 255, .2) 75%,transparent 75%,transparent)
+}
